--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-tab-view": "^2.14.4",
     "react-native-textinput-effects": "^0.6.1",
     "react-native-web": "~0.11.7",
-    "@react-native-community/async-storage": "~1.11.0"
+    "@react-native-community/async-storage": "~1.11.0",
+    "expo-blur": "~8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
