--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/vector-icons": "^10.0.0",
     "@material-ui/core": "^4.10.2",
+    "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/datetimepicker": "^2.6.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
@@ -23,9 +24,11 @@
     "@types/react-native-snap-carousel": "^3.8.1",
     "expo": "~38.0.4",
     "expo-asset": "~8.1.7",
+    "expo-blur": "~8.1.2",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-linking": "^1.0.1",
+    "expo-notifications": "~0.3.3",
     "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.0",
     "expo-web-browser": "~8.3.1",
@@ -34,6 +37,7 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-awesome-card-io": "^0.8.3",
     "react-native-calendars": "^1.300.0",
     "react-native-flip-timer": "0.0.4",
@@ -49,10 +53,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-tab-view": "^2.14.4",
     "react-native-textinput-effects": "^0.6.1",
-    "react-native-web": "~0.11.7",
-    "@react-native-community/async-storage": "~1.11.0",
-    "expo-blur": "~8.1.2",
-    "expo-notifications": "~0.3.3"
+    "react-native-vector-icons": "^7.0.0",
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
