--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/datetimepicker": "^2.6.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.6.1",
+    "@react-navigation/material-bottom-tabs": "^5.2.14",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "@types/react-native-calendars": "^1.20.8",
