--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "moment": "^2.27.0",
     "native-base": "^2.13.12",
     "react": "~16.11.0",
+    "react-countdown-circle-timer": "^2.3.7",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-awesome-card-io": "^0.8.3",
     "react-native-calendars": "^1.300.0",
+    "react-native-countdown-circle-timer": "^2.3.7",
     "react-native-flip-timer": "0.0.4",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
@@ -52,6 +54,7 @@
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-textinput-effects": "^0.6.1",
     "react-native-vector-icons": "^7.0.0",
