--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@react-navigation/stack": "^5.6.2",
     "@types/react-native-calendars": "^1.20.8",
     "@types/react-native-snap-carousel": "^3.8.1",
-    "expo": "~38.0.4",
+    "expo": "^38.0.9",
     "expo-asset": "~8.1.7",
     "expo-blur": "~8.1.2",
     "expo-constants": "~9.1.1",
