--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@material-ui/core": "^4.10.2",
     "@mdi/font": "^5.9.55",
     "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-community/blur": "^3.6.0",
     "@react-native-community/datetimepicker": "3.5.2",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/slider": "3.0.3",
@@ -37,6 +38,7 @@
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
+    "firebase": "^8.8.0",
     "moment": "^2.27.0",
     "native-base": "^2.13.12",
     "react": "16.13.1",
@@ -45,13 +47,19 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-awesome-card-io": "^0.8.3",
+    "react-native-barcode-builder": "^2.0.0",
+    "react-native-barcode-expo": "^1.1.1",
+    "react-native-barcode-svg": "0.0.15",
     "react-native-calendars": "^1.300.0",
     "react-native-countdown-circle-timer": "^2.5.3",
     "react-native-flip-timer": "0.0.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-indicators": "^0.17.0",
+    "react-native-jsbarcode": "0.0.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-modal": "^12.0.3",
     "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-paper": "^3.10.1",
     "react-native-popup-menu": "^0.15.8",
@@ -60,11 +68,13 @@
     "react-native-screens": "~3.4.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "12.1.1",
+    "react-native-svg": "^12.1.1",
     "react-native-tab-view": "^2.14.4",
     "react-native-textinput-effects": "^0.6.1",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.13.12",
+    "react-native-web-swiper": "^2.2.1",
     "react-pencil": "^1.1.1"
   },
   "devDependencies": {
