--- a/app.json
+++ b/app.json
@@ -2,8 +2,8 @@
   "expo": {
     "name": "Irvine High Mobile",
     "slug": "ihsApp",
-    "version": "1.0.5",
-    "sdkVersion": "40.0.0",
+    "version": "1.1.1",
+    "sdkVersion": "41.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/IHSLogoBWhite.png",
     "scheme": "myapp",
@@ -26,7 +26,8 @@
       "favicon": "./assets/images/favicon.png"
     },
     "android": {
-      "package": "com.ericslee1207.ihsApp"
+      "package": "com.ericslee1207.ihsApp",
+      "versionCode": 2
     }
   }
 }
