--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@expo/vector-icons": "^12.0.0",
     "@material-ui/core": "^4.10.2",
     "@mdi/font": "^5.9.55",
-    "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-native-community/blur": "^3.6.0",
-    "@react-native-community/datetimepicker": "3.5.2",
+    "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/slider": "3.0.3",
     "@react-navigation/bottom-tabs": "^5.6.1",
@@ -26,25 +26,26 @@
     "@react-navigation/stack": "^5.6.2",
     "@types/react-native-calendars": "^1.20.8",
     "@types/react-native-snap-carousel": "^3.8.1",
-    "expo": "^42.0.0",
+    "expo": "^41.0.0",
     "expo-app-loading": "^1.1.2",
-    "expo-asset": "~8.3.2",
+    "expo-asset": "~8.3.1",
     "expo-blur": "~9.0.3",
-    "expo-constants": "~11.0.1",
-    "expo-font": "~9.2.1",
-    "expo-linear-gradient": "~9.2.0",
-    "expo-linking": "~2.3.1",
-    "expo-notifications": "~0.12.2",
-    "expo-splash-screen": "~0.11.2",
+    "expo-cli": "^4.9.0",
+    "expo-constants": "~10.1.3",
+    "expo-font": "~9.1.0",
+    "expo-linear-gradient": "~9.1.0",
+    "expo-linking": "~2.2.3",
+    "expo-notifications": "~0.11.6",
+    "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
-    "expo-web-browser": "~9.2.0",
-    "firebase": "^8.8.0",
+    "expo-web-browser": "~9.1.0",
+    "firebase": "8.2.3",
     "moment": "^2.27.0",
     "native-base": "^2.13.12",
     "react": "16.13.1",
     "react-countdown-circle-timer": "^2.3.7",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-awesome-card-io": "^0.8.3",
     "react-native-barcode-builder": "^2.0.0",
@@ -63,12 +64,12 @@
     "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-paper": "^3.10.1",
     "react-native-popup-menu": "^0.15.8",
-    "react-native-reanimated": "~2.2.0",
+    "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-screens": "~3.0.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-textinput-effects": "^0.6.1",
     "react-native-uuid": "^2.0.1",
@@ -82,7 +83,7 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "babel-preset-expo": "8.3.0",
-    "jest-expo": "^42.0.0",
+    "jest-expo": "^41.0.0",
     "typescript": "~4.0.0"
   },
   "private": true
