--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@react-navigation/material-bottom-tabs": "^5.2.14",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "@sendgrid/mail": "^7.4.6",
     "@types/react-native-calendars": "^1.20.8",
     "@types/react-native-snap-carousel": "^3.8.1",
+    "cors": "^2.8.5",
     "expo": "^41.0.0",
     "expo-app-loading": "^1.1.2",
     "expo-asset": "~8.3.1",
@@ -39,9 +41,11 @@
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.1.0",
+    "express": "^4.17.1",
     "firebase": "8.2.3",
     "moment": "^2.27.0",
     "native-base": "^2.13.12",
+    "nodemon": "^2.0.12",
     "react": "16.13.1",
     "react-countdown-circle-timer": "^2.3.7",
     "react-dom": "16.13.1",
