--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,7 @@
     "resolveJsonModule": true,
     "strict": true
   },
-  "extends": "expo/tsconfig.base"
+  "extends": "expo/tsconfig.base",
+
+  
 }
